--- a/XIndex-R/.gitignore
+++ b/XIndex-R/.gitignore
@@ -1,9 +1,9 @@
 build/
 .vscode/
 CMakeFiles
-cmake_install.cmake_install
+cmake_install.cmake
 CMakeCache.txt
 compile_commands.json
 Makefile
-micro_bench
+microbench
 *.log
